@@ -16,6 +16,7 @@
   * Add Find More Plugins button to Plugins preference page
   * Fix #518 remove header in add torrent dialog to save vertical space
   * Add a Cache preferences page to adjust cache settings and examine cache status
+  * Add ability to rename files prior to adding them
 
 ==== ConsoleUI ====
   * Changed to use curses for a more interactive client
